--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
---spring.jpa.defer-datasource-initialization=true
---spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=none
 
---spring.sql.init.data-locations=classpath*:db/data.sql
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath*:db/schema.sql
+spring.sql.init.data-locations=classpath*:db/data.sql
