--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,6 @@ java {
 	sourceCompatibility = '17'
 }
 
-ext {
-	junitVersion = "5.7.1"
-}
-
 repositories {
 	mavenCentral()
 }
@@ -23,9 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
-
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.1'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+	implementation 'org.springframework.boot:spring-boot-starter-test'
 
 	runtimeOnly 'com.h2database:h2'
 
